# SpeedMeter_simulation

./: .gitignore  CMakeLists.txt  README.md
docs/: sprawozdanie_licznik_rowerowy.docx
include/: AppController.hpp  BikeComputer.hpp  Display.hpp  HallSensorAdapter.hpp  IdleState.hpp  Logger.hpp  MovingAverageFilter.hpp  NoFilter.hpp  PausedState.hpp  RideData.hpp  RidingState.hpp  TBikeSensor.hpp  TObserver.hpp  TRideState.hpp  TSpeedFilter.hpp
src/: AppController.cpp  BikeComputer.cpp  Display.cpp  HallSensorAdapter.cpp  IdleState.cpp  Logger.cpp  MovingAverageFilter.cpp  NoFilter.cpp  PausedState.cpp  RidingState.cpp  main.cpp
tests/: FakeBikeSensor.hpp  test_BikeComputer.cpp  test_MovingAverageFilter.cpp
